added api info + junits + readme